feat: 初始化AI提示词专家项目并添加Docker部署支持
添加基础项目文件，包括Docker配置、README文档和核心功能实现
支持多语言界面和多种提示词优化框架
提供本地开发和Docker部署方案

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -21,12 +21,12 @@ jobs:
         runs-on: ubuntu-latest
         steps:
             - name: 加固运行器（审计所有出站调用）
-              uses: step-security/harden-runner@e3f713f2d8f53843e71c69a996d56f51aa9adfb9 # v2.14.1
+              uses: step-security/harden-runner@5ef0c079ce82195b2a36a210272d6b661572d83e # v2.14.2
               with:
                   egress-policy: audit
 
             - name: 检出代码
-              uses: actions/checkout@8e8c483db84b4bee98b60c0593521ed34d9990e8 # v6.0.1
+              uses: actions/checkout@de0fac2e4500dabe0009e67214ff5f5447ce83dd # v6.0.2
 
             - name: 从 package.json 提取版本号
               id: version
@@ -83,9 +83,9 @@ jobs:
               uses: docker/metadata-action@c299e40c65443455700f0fdfc63efafe5b349051 # v5.10.0
               with:
                 images: |
-                  ${{ secrets.DOCKERHUB_USERNAME }}/302_llm_playground
-                  ghcr.io/${{ github.repository }}/302_llm_playground
-                  crpi-wk2d8umombj539de.cn-shanghai.personal.cr.aliyuncs.com/xmz-1/302_llm_playground
+                  ${{ secrets.DOCKERHUB_USERNAME }}/302_prompt_generator
+                  ghcr.io/${{ github.repository }}/302_prompt_generator
+                  crpi-wk2d8umombj539de.cn-shanghai.personal.cr.aliyuncs.com/xmz-1/302_prompt_generator
                 # 关闭所有默认生成器
                 flavor: |
                   latest=false
