--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -61,15 +61,17 @@ jobs:
             - name: 提取依赖版本
               id: deps
               run: |
-                  NODE_VERSION=$(node -p "require('./package.json').devDependencies['@types/node'].replace('^', '')")
-                  NEXTJS_VERSION=$(node -p "require('./package.json').dependencies.next.replace('^', '')")
-                  YARN_VERSION=$(node -p "require('./package.json').packageManager.replace('yarn@', '')")
+                  NODE_VERSION=$(node -v | sed 's/v//')
+                  REACT_VERSION=$(node -p "require('./package.json').dependencies.react.replace('^', '')")
+                  VITE_VERSION=$(node -p "require('./package.json').devDependencies.vite.replace('^', '')")
+                  YARN_VERSION=$(yarn -v)
                   TYPESCRIPT_VERSION=$(node -p "require('./package.json').devDependencies.typescript.replace('^', '')")
                   echo "NODE_VERSION=$NODE_VERSION" >> $GITHUB_OUTPUT
-                  echo "NEXTJS_VERSION=$NEXTJS_VERSION" >> $GITHUB_OUTPUT
+                  echo "REACT_VERSION=$REACT_VERSION" >> $GITHUB_OUTPUT
+                  echo "VITE_VERSION=$VITE_VERSION" >> $GITHUB_OUTPUT
                   echo "YARN_VERSION=$YARN_VERSION" >> $GITHUB_OUTPUT
                   echo "TYPESCRIPT_VERSION=$TYPESCRIPT_VERSION" >> $GITHUB_OUTPUT
-                  echo "Node: $NODE_VERSION, Next.js: $NEXTJS_VERSION, Yarn: $YARN_VERSION, TypeScript: $TYPESCRIPT_VERSION"
+                  echo "Node: $NODE_VERSION, React: $REACT_VERSION, Vite: $VITE_VERSION, Yarn: $YARN_VERSION, TypeScript: $TYPESCRIPT_VERSION"
 
             - name: Docker 元数据（主流容器注册表）
               id: meta
@@ -107,7 +109,8 @@ jobs:
                   org.opencontainers.image.authors=qixiaoxin@stu.sqxy.edu.cn
                   build.url=https://github.com/xiaomizhoubaobei/LLM-Playground/actions/runs/${{ github.run_id }}
                   dependencies.node=${{ steps.deps.outputs.NODE_VERSION }}
-                  org.opencontainers.image.nextjs=${{ steps.deps.outputs.NEXTJS_VERSION }}
+                  org.opencontainers.image.react=${{ steps.deps.outputs.REACT_VERSION }}
+                  org.opencontainers.image.vite=${{ steps.deps.outputs.VITE_VERSION }}
                   org.opencontainers.image.yarn=${{ steps.deps.outputs.YARN_VERSION }}
                   org.opencontainers.image.typescript=${{ steps.deps.outputs.TYPESCRIPT_VERSION }}
                 cache-from: type=gha
@@ -135,14 +138,14 @@ jobs:
             - name: 证明 DockerHub 镜像
               uses: actions/attest-build-provenance@96278af6caaf10aea03fd8d33a09a777ca52d62f # v3.2.0
               with:
-                subject-name: index.docker.io/${{ secrets.DOCKERHUB_USERNAME }}/302_llm_playground
+                subject-name: index.docker.io/${{ secrets.DOCKERHUB_USERNAME }}/302_prompt_generator
                 subject-digest: ${{ steps.build.outputs.digest }}
                 push-to-registry: true
 
             - name: 证明 GHCR 镜像
               uses: actions/attest-build-provenance@96278af6caaf10aea03fd8d33a09a777ca52d62f # v3.2.0
               with:
-                subject-name: ghcr.io/${{ github.repository }}/302_llm_playground
+                subject-name: ghcr.io/${{ github.repository }}/302_prompt_generator
                 subject-digest: ${{ steps.build.outputs.digest }}
                 push-to-registry: true
 
